@@ -33,6 +33,9 @@ typedef struct rmm_hdr_block_t {
     apr_rmm_off_t /* rmm_block_t */ firstfree;
 } rmm_hdr_block_t;
 
+#define RMM_HDR_BLOCK_SIZE (APR_ALIGN_DEFAULT(sizeof(rmm_hdr_block_t)))
+#define RMM_BLOCK_SIZE (APR_ALIGN_DEFAULT(sizeof(rmm_block_t)))
+
 struct apr_rmm_t {
     apr_pool_t *p;
     rmm_hdr_block_t *base;
@@ -87,7 +90,7 @@ static apr_rmm_off_t find_block_of_size(apr_rmm_t *rmm, apr_size_t size)
         next = blk->next;
     }
 
-    if (bestsize > sizeof(rmm_block_t) + size) {
+    if (bestsize > RMM_BLOCK_SIZE + size) {
         struct rmm_block_t *blk = (rmm_block_t*)((char*)rmm->base + best);
         struct rmm_block_t *new = (rmm_block_t*)((char*)rmm->base + best + size);
 
@@ -104,11 +107,7 @@ static apr_rmm_off_t find_block_of_size(apr_rmm_t *rmm, apr_size_t size)
         }
     }
 
-    if (best) {
-        return best;
-    }
-     
-    return 0;
+    return best;
 }
 
 static void move_block(apr_rmm_t *rmm, apr_rmm_off_t this, int free)
@@ -205,7 +204,7 @@ APU_DECLARE(apr_status_t) apr_rmm_init(apr_rmm_t **rmm, apr_anylock_t *lock,
 
     (*rmm)->base->abssize = size;
     (*rmm)->base->firstused = 0;
-    (*rmm)->base->firstfree = sizeof(rmm_hdr_block_t);
+    (*rmm)->base->firstfree = RMM_HDR_BLOCK_SIZE;
 
     blk = (rmm_block_t *)((char*)base + (*rmm)->base->firstfree);
 
@@ -213,8 +212,7 @@ APU_DECLARE(apr_status_t) apr_rmm_init(apr_rmm_t **rmm, apr_anylock_t *lock,
     blk->prev = 0;
     blk->next = 0;
 
-    APR_ANYLOCK_UNLOCK(lock);
-    return APR_SUCCESS;
+    return APR_ANYLOCK_UNLOCK(lock);
 }
 
 APU_DECLARE(apr_status_t) apr_rmm_destroy(apr_rmm_t *rmm)
@@ -247,8 +245,7 @@ APU_DECLARE(apr_status_t) apr_rmm_destroy(apr_rmm_t *rmm)
     rmm->base->abssize = 0;
     rmm->size = 0;
 
-    APR_ANYLOCK_UNLOCK(&rmm->lock);
-    return APR_SUCCESS;
+    return APR_ANYLOCK_UNLOCK(&rmm->lock);
 }
 
 APU_DECLARE(apr_status_t) apr_rmm_attach(apr_rmm_t **rmm, apr_anylock_t *lock,
@@ -281,15 +278,15 @@ APU_DECLARE(apr_rmm_off_t) apr_rmm_malloc(apr_rmm_t *rmm, apr_size_t reqsize)
 {
     apr_rmm_off_t this;
     
-    reqsize = APR_ALIGN_DEFAULT(reqsize);
+    reqsize = APR_ALIGN_DEFAULT(reqsize) + RMM_BLOCK_SIZE;
 
     APR_ANYLOCK_LOCK(&rmm->lock);
 
-    this = find_block_of_size(rmm, reqsize + sizeof(rmm_block_t));
+    this = find_block_of_size(rmm, reqsize);
 
     if (this) {
         move_block(rmm, this, 0);
-        this += sizeof(rmm_block_t);
+        this += RMM_BLOCK_SIZE;
     }
 
     APR_ANYLOCK_UNLOCK(&rmm->lock);
@@ -300,16 +297,16 @@ APU_DECLARE(apr_rmm_off_t) apr_rmm_calloc(apr_rmm_t *rmm, apr_size_t reqsize)
 {
     apr_rmm_off_t this;
         
-    reqsize = APR_ALIGN_DEFAULT(reqsize);
+    reqsize = APR_ALIGN_DEFAULT(reqsize) + RMM_BLOCK_SIZE;
 
     APR_ANYLOCK_LOCK(&rmm->lock);
 
-    this = find_block_of_size(rmm, reqsize + sizeof(rmm_block_t));
+    this = find_block_of_size(rmm, reqsize);
 
     if (this) {
         move_block(rmm, this, 0);
-        this += sizeof(rmm_block_t);
-        memset((char*)rmm->base + this, 0, reqsize);
+        this += RMM_BLOCK_SIZE;
+        memset((char*)rmm->base + this, 0, reqsize - RMM_BLOCK_SIZE);
     }
 
     APR_ANYLOCK_UNLOCK(&rmm->lock);
@@ -332,7 +329,7 @@ APU_DECLARE(apr_rmm_off_t) apr_rmm_realloc(apr_rmm_t *rmm, void *entity,
     old = apr_rmm_offset_get(rmm, entity);
 
     if ((this = apr_rmm_malloc(rmm, reqsize)) == 0) {
-        return this;
+        return 0;
     }
 
     blk = (rmm_block_t*)((char*)rmm->base + old);
@@ -353,11 +350,11 @@ APU_DECLARE(apr_status_t) apr_rmm_free(apr_rmm_t *rmm, apr_rmm_off_t this)
     /* A little sanity check is always healthy, especially here.
      * If we really cared, we could make this compile-time
      */
-    if (this < sizeof(rmm_hdr_block_t) + sizeof(rmm_block_t)) {
+    if (this < RMM_HDR_BLOCK_SIZE + RMM_BLOCK_SIZE) {
         return APR_EINVAL;
     }
 
-    this -= sizeof(rmm_block_t);
+    this -= RMM_BLOCK_SIZE;
 
     blk = (rmm_block_t*)((char*)rmm->base + this);
 
@@ -390,8 +387,7 @@ APU_DECLARE(apr_status_t) apr_rmm_free(apr_rmm_t *rmm, apr_rmm_off_t this)
      */
     move_block(rmm, this, 1);
     
-    APR_ANYLOCK_UNLOCK(&rmm->lock);
-    return APR_SUCCESS;
+    return APR_ANYLOCK_UNLOCK(&rmm->lock);
 }
 
 APU_DECLARE(void *) apr_rmm_addr_get(apr_rmm_t *rmm, apr_rmm_off_t entity) 
@@ -413,5 +409,8 @@ APU_DECLARE(apr_rmm_off_t) apr_rmm_offset_get(apr_rmm_t *rmm, void* entity)
 
 APU_DECLARE(apr_size_t) apr_rmm_overhead_get(int n) 
 {
-    return sizeof(rmm_hdr_block_t) + n * sizeof(rmm_block_t);
+    /* overhead per block is at most APR_ALIGN_DEFAULT(1) wasted bytes
+     * for alignment overhead, plus the size of the rmm_block_t
+     * structure. */
+    return RMM_HDR_BLOCK_SIZE + n * (RMM_BLOCK_SIZE + APR_ALIGN_DEFAULT(1));
 }
